Adjust controller and service